update during pairing

--- a/hokusai/staging.yml
+++ b/hokusai/staging.yml
@@ -17,7 +17,7 @@ spec:
           containers:
             - name: frequency-release-metrics
               image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/frequency:staging
-              command: ["bundle", "exec", "ruby", "script.rb"]
+              command: ["bundle", "exec", "rake", "hourly"]
               imagePullPolicy: Always
               envFrom:
                 - configMapRef:
