--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ not_staging_or_release: &not_staging_or_release
         - staging
         - release
 
-only_master: &only_master
+only_main: &only_main
   context: hokusai
   filters:
     branches:
-      only: master
+      only: main
 
 workflows:
   build-deploy:
@@ -24,12 +24,12 @@ workflows:
 
       - hokusai/push:
           name: push-staging-image
-          <<: *only_master
+          <<: *only_main
           requires:
             - hokusai/test
 
       - hokusai/deploy-staging:
-          <<: *only_master
+          <<: *only_main
           project-name: frequency
           requires:
             - push-staging-image
