--- a/hokusai/staging.yml
+++ b/hokusai/staging.yml
@@ -1,10 +1,9 @@
----
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: frequency-release-metrics
 spec:
-  schedule: "48 * * * *"
+  schedule: 48 * * * *
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
@@ -12,28 +11,32 @@ spec:
       template:
         metadata:
           annotations:
-            "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
+            cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
         spec:
           containers:
-            - name: frequency-release-metrics
-              image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/frequency:staging
-              command: ["bundle", "exec", "rake", "hourly"]
-              imagePullPolicy: Always
-              envFrom:
-                - configMapRef:
-                    name: frequency-environment
-              env:
-                - name: DD_AGENT_HOST
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: spec.nodeName
+          - name: frequency-release-metrics
+            image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/frequency:staging
+            command:
+            - bundle
+            - exec
+            - rake
+            - hourly
+            imagePullPolicy: Always
+            envFrom:
+            - configMapRef:
+                name: frequency-environment
+            env:
+            - name: DD_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           restartPolicy: Never
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: tier
-                        operator: In
-                        values:
-                          - background
+                - matchExpressions:
+                  - key: tier
+                    operator: In
+                    values:
+                    - background
