Apply setup conventions to this project

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,1 @@
-AWS_ACCESS_KEY_ID=REPLACEME
-AWS_SECRET_ACCESS_KEY=REPLACEME
-DD_AGENT_HOST=REPLACEME
-GITHUB_ACCESS_TOKEN=REPLACEME
+# Place any local/custom configuration here:
