--- a/hokusai/production.yml
+++ b/hokusai/production.yml
@@ -15,10 +15,12 @@ spec:
         spec:
           containers:
           - name: frequency-release-metrics
-            image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/frequency:staging
+            image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/frequency:production
             command:
-            - echo
-            - noop
+            - bundle
+            - exec
+            - rake
+            - hourly
             imagePullPolicy: Always
             envFrom:
             - configMapRef:
