--- a/hokusai/staging.yml
+++ b/hokusai/staging.yml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: frequency-release-metrics
@@ -39,7 +39,7 @@ spec:
                     values:
                     - background
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: frequency-vulnerabilities-extract
